--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         <label for="fileInput">Pilih File TXT (Banyak File Dapat Dipilih):</label>
         <input type="file" id="fileInput" multiple accept=".txt">
 
-        <div id="formContainer"></div>
+        <label for="contactName1">Nama Kontak 1 (Admin):</label>
+        <input type="text" id="contactName1" placeholder="Nama Kontak 1 (Admin)">
 
-        <label for="vcfName">Nama untuk File VCF:</label>
-        <input type="text" id="vcfName" placeholder="Nama File VCF">
+        <label for="contactName2">Nama Kontak 2 (User):</label>
+        <input type="text" id="contactName2" placeholder="Nama Kontak 2 (User)">
 
         <button id="convertBtn" onclick="convertFiles()">Konvert</button>
 
